--- a/config/MELA_0085.yaml
+++ b/config/MELA_0085.yaml
@@ -1,7 +1,10 @@
 exp:
-  expname: foot_50
   expdir: ./logs/
-  datadir: ./data/foot_50.pickle
+  # MELA0085_HR_100_2.pickle  
+  # SR_MELA0085_HR_100_2_upsampled.pickle  
+  # MELA0085_HR_100.pickle
+  # SR_MELA0085_HR_100_2_ddnm.pickle
+  datadir: ./data/MELA0085_LR_100.pickle
 network:
   net_type: mlp
   num_layers: 4
@@ -15,18 +18,20 @@ encoder:
   input_dim: 3
   num_levels: 16
   level_dim: 2
-  base_resolution: 16
+  # base_resolution: 16
+  base_resolution: 32
   log2_hashmap_size: 19
 render:
-  n_samples: 320
+  n_samples: 768
   n_fine: 0
   perturb: True
   raw_noise_std: 0.
+  # netchunk: 409600
   netchunk: 409600
 train:
-  epoch: 3000
+  epoch: 1500
   n_batch: 1
-  n_rays: 1024
+  n_rays: 2048
   lrate: 0.001
   lrate_gamma: 0.1
   lrate_step: 1500
