--- a/config/MELA_0085.yaml
+++ b/config/MELA_0085.yaml
@@ -4,11 +4,13 @@ exp:
   # SR_MELA0085_HR_100_2_upsampled.pickle  
   # MELA0085_HR_100.pickle
   # SR_MELA0085_HR_100_2_ddnm.pickle
-  datadir: ./data/MELA0085_LR_100.pickle
+  # ./data/MELA0085_LR_100.pickle
+  datadir: ./data/MELA0085_HR_100_2.pickle
+  
 network:
   net_type: mlp
-  num_layers: 4
-  hidden_dim: 32
+  num_layers: 6
+  hidden_dim: 256 # 32
   skips: [2]
   out_dim: 1
   last_activation: sigmoid
@@ -26,13 +28,12 @@ render:
   n_fine: 0
   perturb: True
   raw_noise_std: 0.
-  # netchunk: 409600
   netchunk: 409600
 train:
   epoch: 1500
   n_batch: 1
   n_rays: 2048
-  lrate: 0.001
+  lrate: 0.0001
   lrate_gamma: 0.1
   lrate_step: 1500
   resume: False
