--- a/config/proj_num_tests/MELA0085_70.yaml
+++ b/config/proj_num_tests/MELA0085_70.yaml
@@ -1,12 +1,6 @@
 exp:
   expdir: ./logs/
-  # MELA0085_HR_100_2.pickle  
-  # SR_MELA0085_HR_100_2_upsampled.pickle  
-  # MELA0085_HR_100.pickle
-  # SR_MELA0085_HR_100_2_ddnm.pickle
-  # ./data/MELA0085_LR_100.pickle
-  datadir: ./data/MELA0085_HR_100_2.pickle
-  
+  datadir: ./data/proj_num_tests/MELA0085_num70.pickle
 network:
   net_type: mlp # WIRE
   num_layers: 6
@@ -18,10 +12,10 @@ network:
 encoder:
   encoding: hashgrid
   input_dim: 3
-  num_levels: 32
-  level_dim: 4
+  num_levels: 16
+  level_dim: 2
   # base_resolution: 16
-  base_resolution: 8
+  base_resolution: 32
   log2_hashmap_size: 19
 render:
   n_samples: 768
@@ -33,7 +27,7 @@ train:
   epoch: 1500
   n_batch: 1
   n_rays: 2048
-  lrate: 0.0001
+  lrate: 0.00001
   lrate_gamma: 0.1
   lrate_step: 1500
   resume: False
